[Mantaflow] Incorrect particles count #76690

Closed
opened 2020-05-12 16:58:55 +02:00 by Pavel Blend · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1151.1008

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: 8956e9e5f6
Worked: (newest version of Blender that worked as expected)

Short description of error
The particle system does not display the number of particles correctly. The value is always 0.

Exact steps for others to reproduce the error
mantaflow_particles_count.jpg

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1151.1008 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: `8956e9e5f6` Worked: (newest version of Blender that worked as expected) **Short description of error** The particle system does not display the number of particles correctly. The value is always 0. **Exact steps for others to reproduce the error** ![mantaflow_particles_count.jpg](https://archive.blender.org/developer/F8530932/mantaflow_particles_count.jpg)
Author

Added subscriber: @Pavel_Blend

Added subscriber: @Pavel_Blend
Member

Added subscriber: @sebbas

Added subscriber: @sebbas

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
This value is only displayed for Spray, Floam or Bubbles particles.
But it seems wrong to show 0 for the liquid particles.

I can confirm. This value is only displayed for Spray, Floam or Bubbles particles. But it seems wrong to show 0 for the liquid particles.

Yes, this bug has been bugging me too for some time now. Will look into this again.

Yes, this bug has been bugging me too for some time now. Will look into this again.

Added subscriber: @Criticalphil

Added subscriber: @Criticalphil

This comment was removed by @Criticalphil

*This comment was removed by @Criticalphil*

damn i accidentally removed my comment, it is also affecting the spray foam and bubble particle systems as well, if you look at the screenshot i only baked 5 frames and then put the frame back to one and it says i have an insane amount of particles.

mantaparticles.png

this was from the 2.83 beta version.

damn i accidentally removed my comment, it is also affecting the spray foam and bubble particle systems as well, if you look at the screenshot i only baked 5 frames and then put the frame back to one and it says i have an insane amount of particles. ![mantaparticles.png](https://archive.blender.org/developer/F8548311/mantaparticles.png) this was from the 2.83 beta version.

This issue was referenced by ff2fa59689

This issue was referenced by ff2fa5968931ff49fb554786543422367e6f2187
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-07-15 12:53:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76690
No description provided.