Fix T76690: Incorrect liquid particle count displayed

Reviewers: sergey, sebbas

Differential Revision: https://developer.blender.org/D7852